# collab-editor

./: .gitignore  Makefile  README.md  TODO.md  doc.yjs  go.mod  index.html  main.go  package-lock.json  package.json  vite.config.mjs
docs/: formatting-spec.md  guid-rooms.md  makefile-usage.md  refactor-checklist.md  refactor-collab-editor.md  refactor-plan.md  rust-developer-notes.md  user-guide.md  uuid-rooms.md
frontend/: bundle.js  editor.js  index.html
legacy/: editor.js
public/: bundle.js  index.html  service-worker.js  style.css
public/public/: index.html
rust-server/: Cargo.toml
rust-server/src/: main.rs
src/: app.js
src/core/: cursor-plugin.js
src/export/: handlers.js
src/setup/: editorSetup.js  userSetup.js  yjsSetup.js
src/ui/: cursorWidget.js  logging.js  remoteCursorPlugin.js  typingIndicator.js  userList.js
