
[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }


# futures = "0.3"
# actix-cors = "0.6"
# mime_guess = "2.0"
# tracing = "0.1"
# tracing-subscriber = "0.3"

